- use ArrayList instead of LinkedList where possible
Former-commit-id: c6f7996ddf7feb8e176a9a7afe37f229ab8789ae